# Indie_studio

./: .gitignore  BomberMan.hpp  BomberManInit.cpp  CMakeLists.txt  GameInit.cpp  Menu.hpp  MyRaylib.cpp  MyRaylib.hpp  PreMenu.hpp  README.md  SpriteInit.cpp  main.cpp
ECS/: CameraECS.hpp  CollisionRenderer.hpp  Component.hpp  ECS.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  GeoAnimationRenderer.hpp  GeometricRenderer.hpp  ModelRenderer.hpp  PlayerComponent.hpp  SpriteRenderer.hpp  SpriteRendererPlus.hpp  Transform.hpp
EntitiesDataNewGame/: Camera  Dumbledore  McGonagal  Tribune  Tribune PNJ 0  Tribune PNJ 1
HelpDeveloppement/: BooleanCondition.hpp  Developpement.cpp  Developpement.hpp  Gestion.hpp  PositionRect.hpp  PositionText.hpp  RectangleDev.hpp  Text.hpp
Models/Dumbledore/: skdumbledoreMesh.fbx  skdumbledoreMesh.mtl
Models/GenFemale/: GenFemale.fbx  GenFemale.mtl  GenFemaleANIM.fbx
Models/GenFemale/Hair/: GenFemHair01.fbx  GenFemHair01.mtl  GenFemHair02.fbx  GenFemHair02.mtl  GenFemHair03.fbx  GenFemHair03.mtl
Models/GenMale/: GenMale.fbx  GenMale.mtl  GenMaleANIM.fbx
Models/GenMale/Gryffinder/: MaleGryffindor1.iqm
Models/GenMale/Hair/: GenMaleHair01.fbx  GenMaleHair01.mtl  GenMaleHair02.fbx  GenMaleHair02.mtl  GenMaleHair03.fbx  GenMaleHair03.mtl
Models/GreatHall/: Great_Hall_Model.mtl
Models/Tribune/: myTribune.blend  myTribune.mtl
Models/TribuneSpeak/: Harry Potter.fbx
Models/assets/Banner/: Banner.fbx  Banner.mtl  BannerANIM.fbx
Models/assets/Hogwarts Tower/: Towers.mtl
Models/assets/Quidditch_Intro.unr/: Quidditch_Intro.mtl
Models/assets/Quidditch_Intro.unr/SKY/: instructions.txt
Models/assets/Triwizard Cup/: TriwizardCup.mtl
Models/assets/skgen_fem_1Mesh/: skgen_fem_1Mesh.fbx  skgen_fem_1Mesh.mtl
Models/assets/skgen_male_1Mesh/: skgen_male_1Mesh.fbx  skgen_male_1Mesh.mtl
Models/assets/skhp2_genfemale1Mesh/Gryffindor/: skhp2_genfemale1Mesh.mtl
Models/assets/skhp2_genfemale1Mesh/Hufflepuff/: skhp2_genfemale1Mesh.mtl
Models/assets/skhp2_genfemale1Mesh/Ravenclaw/: skhp2_genfemale1Mesh.mtl
Models/assets/skhp2_genfemale1Mesh/Slytherin/: skhp2_genfemale1Mesh.fbx  skhp2_genfemale1Mesh.mtl
Models/assets/skhp2_genfemale2Mesh/Gryffindor/: skhp2_genfemale2Mesh.mtl
Models/assets/skhp2_genfemale2Mesh/Hufflepuff/: skhp2_genfemale2Mesh.mtl
Models/assets/skhp2_genfemale2Mesh/Ravenclaw/: skhp2_genfemale2Mesh.fbx  skhp2_genfemale2Mesh.mtl
Models/assets/skhp2_genfemale2Mesh/Slytherin/: skhp2_genfemale2Mesh.mtl
Models/assets/skhp2_genmale1Mesh/Gryffindor/: skhp2_genmale1Mesh.fbx  skhp2_genmale1Mesh.mtl
Models/assets/skhp2_genmale1Mesh/Hufflepuff/: skhp2_genmale1Mesh.mtl
Models/assets/skhp2_genmale1Mesh/Ravenclaw/: skhp2_genmale1Mesh.mtl
Models/assets/skhp2_genmale1Mesh/Slytherin/: skhp2_genmale1Mesh.mtl
Models/assets/skhp2_genmale2Mesh/Gryffindor/: skhp2_genmale2Mesh.mtl
Models/assets/skhp2_genmale2Mesh/Hufflepuff/: skhp2_genmale2Mesh.fbx  skhp2_genmale2Mesh.mtl
Models/assets/skhp2_genmale2Mesh/Ravenclaw/: skhp2_genmale2Mesh.mtl
Models/assets/skhp2_genmale2Mesh/Slytherin/: skhp2_genmale2Mesh.mtl
Models/skDobby/: INFOmesh.txt
Models/skDobby/skDobbyMesh/: dobby.iqm  skDobbyMesh.fbx  skDobbyMesh.mtl
Models/skDraco/FBX/: BreathingIdle.fbx  Cheering.fbx  Defeated.fbx  LeftTurn90Idle.fbx  LeftTurn90Walk.fbx  RightTurn90Idle.fbx  RightTurn90Walk.fbx  StartWalking.fbx  Turn180Idle.fbx  Walking.fbx  skDraco.fbx  skdracoMesh.fbx
Models/skDraco/GLTF/: skDraco.gltf
Models/skFred/skfredMesh/: fred.iqm  skfredMesh.fbx  skfredMesh.mtl
Models/skNeville/sknevilleMesh/: sknevilleMesh.fbx  sknevilleMesh.mtl
Models/skPumpkin/PumpkinPasty_SM/: PumpkinPasty.mtl
Models/skharryMesh/: skharry.iqm  skharryMesh.mtl
